Adição de imagem e experiências

--- a/index.html
+++ b/index.html
@@ -29,10 +29,35 @@
                 que os usuários adoram.</p>
             <a href="">ENTRE EM CONTATO</a>
         </div>
-        <img src="" alt="Foto do Denis">
-        <hr>
+        <img src="./assets/img/profile-denis.jpg" alt="Foto do Denis" width="200">
     </section>
+    <hr>
 
+    <section>
+        <div>
+            <div>
+                <i class="fa-brands fa-html5"></i>
+                <div>
+                    <h3>HTML</h3>
+                    <P>4 meses de experiência</P>
+                </div>
+            </div>
+            <div>
+                <i class="fa-brands fa-css3-alt"></i>
+                <div>
+                    <h3>CSS</h3>
+                    <P>3 meses de experiência</P>
+                </div>
+            </div>
+            <div>
+                <i class="fa-brands fa-js"></i>
+                <div>
+                    <h3>Javascript</h3>
+                    <P>2 meses de experiência</P>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 
