Criação da seção Projetos

--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
             </h2>
             <p>Morando em Joinville/SC, sou um desenvolvedor front-end apaixonado por criar aplicativos web acessíveis
                 que os usuários adoram.</p>
-            <a href="">ENTRE EM CONTATO</a>
+            <a href="" target="_blank">ENTRE EM CONTATO</a>
         </div>
         <img src="./assets/img/profile-denis.jpg" alt="Foto do Denis" width="200">
     </section>
     <hr>
 
     <section>
+        <h2>Linguagens</h2>
         <div>
             <div>
                 <i class="fa-brands fa-html5"></i>
@@ -57,6 +58,28 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section>
+        <div>
+            <h2>Projetos</h2>
+            <a href="" target="_blank">ENTRE EM CONTATO</a>
+        </div>
+        <div>
+            <img src="./assets/img/Blog.png" alt="Imagem do Blog" width="250">
+            <h4>Projeto Blog</h4>
+            <span>HTML</span>
+            <span>CSS</span>
+            <span>Javascript</span>
+        </div>
+        <div>
+            <img src="./assets/img/Calculadora.png" alt="Imagem da Calculadora" width="250">
+            <h4>Projeto Calculadora</h4>
+            <span>HTML</span>
+            <span>CSS</span>
+            <span>Javascript</span>
+        </div>
+
     </section>
 
 </body>
