--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
-    <!-- Link dos ícones-->
+    <meta name="description" content="Conheça o meu portifólio com alguns dos projetos e as linguagens que trabalhei.">
+        <!-- Link dos ícones-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <title>Portifólio Denis</title>
 </head>
@@ -79,9 +80,35 @@
             <span>CSS</span>
             <span>Javascript</span>
         </div>
-
     </section>
 
-</body>
+    <section>
+        <div>
+            <h2>CONTATO</h2>
+            <p>Adoraria saber mais sobre o seu projeto e como posso ajudar. Por favor, preencha o formulário, e
+                retornarei o contato o mais rápido possível.</p>
+        </div>
+        <div>
+            <form>
+                <input type="text" required placeholder="Nome" id="Nome" name="Nome"><br>
+                <input type="email" required placeholder="E-mail" id="E-mail" name="E-mail"><br>
+                <input type="text" required placeholder="Mensagem"><br>
+                <input type="submit" value="ENVIAR MENSAGEM">
+            </form>
+        </div>
+    </section>
+    <hr>
 
+    <footer>
+        <h1>DENIS BECK</h1>
+        <nav>
+            <a href="github"><i class="fa-brands fa-github"></i></a>
+            <a href="instagram"><i class="fa-brands fa-instagram"></i></a>
+            <a href="linkedin"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="twitter"><i class="fa-brands fa-x-twitter"></i></a>
+        </nav>
+        <nav>Desenvolvido por <strong>Denis Beck</strong> <i class="fa-solid fa-computer" style="color: #561a26;"></i>
+        </nav>
+    </footer>
+</body>
 </html>
