Adicionads estilos CSS ao portifólio

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Conheça o meu portifólio com alguns dos projetos e as linguagens que trabalhei.">
         <!-- Link dos ícones -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <link rel="stylesheet" href="./assets/style/style.css">
     <title>Portifólio Denis</title>
 </head>
 
