--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header section>
+    <header>
         <h1>DENIS BECK</h1>
         <nav>
             <a href="github"><i class="fa-brands fa-github"></i></a>
@@ -29,7 +29,7 @@
 
             <p>Morando em Joinville/SC, sou um desenvolvedor front-end apaixonado por criar aplicativos web acessíveis
                 que os usuários adoram.</p>
-            <a class="cta-contact" target="_blank">ENTRE EM CONTATO</a>
+            <a href="" class="cta-contact" target="_blank">ENTRE EM CONTATO</a>
         </div>
         <img src="./assets/img/profile-denis.jpg" alt="Foto do Denis" width="200">
     </section>
@@ -62,7 +62,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="section-project">
         <div class="projects">
             <h2><span>Projetos</span></h2>
             <a href="" class="cta-contact" target="_blank">ENTRE EM CONTATO</a>
@@ -76,8 +76,8 @@
                 <span>Javascript</span>
             </div>
             <div class="box-projects-links">
-                <a class="cta-contact" target="_blank">PROJETO</a>
-                <a class="cta-contact" target="_blank">CÓDIGO</a>
+                <a href="" class="cta-contact" target="_blank">VER PROJETO</a>
+                <a href="" class="cta-contact" target="_blank">VER CÓDIGO</a>
             </div>
         </div>
 
@@ -90,15 +90,15 @@
                 <span>Javascript</span>
             </div>
             <div class="box-projects-links">
-                <a class="cta-contact" target="_blank">PROJETO</a>
-                <a class="cta-contact" target="_blank">CÓDIGO</a>
+                <a href="" class="cta-contact" target="_blank">VER PROJETO</a>
+                <a href="" class="cta-contact" target="_blank">VER CÓDIGO</a>
             </div>
         </div>
     </section>
 
-    <section>
+    <section class="contact">
         <div>
-            <h2>CONTATO</h2>
+            <h2><span>CONTATO</span></h2>
             <p>Adoraria saber mais sobre o seu projeto e como posso ajudar. Por favor, preencha o formulário, e
                 retornarei o contato o mais rápido possível.</p>
         </div>
