--- a/index.html
+++ b/index.html
@@ -23,43 +23,45 @@
     </header>
 
     <section class="section-about">
-        <div>
+        <div class="section-about-box">
             <h3>Prazer em te conhecer!</h3>
             <h2>Eu sou <span> Denis Beck</span></h2>
 
-            <p>Morando em Joinville/SC, sou um desenvolvedor front-end apaixonado por criar aplicativos web acessíveis
+            <p>Morando em Joinville/SC, sou um desenvolvedor <br> front-end apaixonado por criar aplicativos web <br>
+                acessíveis
                 que os usuários adoram.</p>
             <a href="" class="cta-contact" target="_blank">ENTRE EM CONTATO</a>
         </div>
-        <img src="./assets/img/profile-denis.jpg" alt="Foto do Denis" width="200">
+        <img src="./assets/img/profile-denis.jpg" alt="Foto do Denis">
     </section>
     <hr>
 
-    <section class="Linguagens-box">
+    <section class="linguagens-box">
         <h2><span>Linguagens</span></h2>
-        <div class="Linguaens-box-one">
-            <div class="box">
-                <i class="fa-brands fa-lg fa-html5"></i>
-                <div class="box-text">
-                    <h3>HTML</h3>
-                    <P>4 meses de experiência</P>
+        <div class="container-Linguagens-box">
+            <div class="linguagens-box-one">
+                <div class="box">
+                    <i class="fa-brands fa-lg fa-html5"></i>
+                    <div class="box-text">
+                        <h3>HTML</h3>
+                        <P>4 meses de experiência</P>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fa-brands fa-lg fa-css3-alt"></i>
+                    <div class="box-text">
+                        <h3>CSS</h3>
+                        <P>3 meses de experiência</P>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fa-brands fa-js"></i>
+                    <div class="box-text">
+                        <h3>Javascript</h3>
+                        <P>2 meses de experiência</P>
+                    </div>
                 </div>
             </div>
-            <div class="box">
-                <i class="fa-brands fa-lg fa-css3-alt"></i>
-                <div class="box-text">
-                    <h3>CSS</h3>
-                    <P>3 meses de experiência</P>
-                </div>
-            </div>
-            <div class="box">
-                <i class="fa-brands fa-js"></i>
-                <div class="box-text">
-                    <h3>Javascript</h3>
-                    <P>2 meses de experiência</P>
-                </div>
-            </div>
-        </div>
     </section>
 
     <section class="section-project">
@@ -102,14 +104,12 @@
             <p>Adoraria saber mais sobre o seu projeto e como posso ajudar. Por favor, preencha o formulário, e
                 retornarei o contato o mais rápido possível.</p>
         </div>
-        <div>
-            <form>
-                <input type="text" required placeholder="Nome" id="Nome" name="Nome"><br>
-                <input type="email" required placeholder="E-mail" id="E-mail" name="E-mail"><br>
-                <input type="text" required placeholder="Mensagem"><br>
-                <input type="submit" value="ENVIAR MENSAGEM">
-            </form>
-        </div>
+        <form>
+            <input type="text" required placeholder="Nome" id="Nome" name="NOME"><br>
+            <input type="email" required placeholder="E-mail" id="E-mail" name="E-MAIL"><br>
+            <input type="text" required placeholder="MENSAGEM"><br>
+            <button type="submit" class="cta-contact">ENVIAR MENSAGEM</button>
+        </form>
     </section>
     <hr>
 
@@ -121,8 +121,8 @@
             <a href="linkedin"><i class="fa-brands fa-linkedin"></i></a>
             <a href="twitter"><i class="fa-brands fa-x-twitter"></i></a>
         </nav>
-        <nav>Desenvolvido por <strong>Denis Beck</strong> <i class="fa-solid fa-computer" style="color: #561a26;"></i>
-        </nav>
+        <div>Desenvolvido por <strong>Denis Beck</strong> <i class="fa-solid fa-computer" style="color: #da4966;"></i>
+        </div>
     </footer>
 </body>
 
