Atualizações HTML e CSS - Seções Projeto e Contato

--- a/index.html
+++ b/index.html
@@ -62,54 +62,61 @@
                     </div>
                 </div>
             </div>
+        </div>
     </section>
-
+    <hr>
     <section class="section-project">
         <div class="projects">
             <h2><span>Projetos</span></h2>
             <a href="" class="cta-contact" target="_blank">ENTRE EM CONTATO</a>
         </div>
-        <div class="box-projects">
-            <img src="./assets/img/Blog.png" alt="Imagem do Blog" width="250">
-            <div class="box-projects-text">
-                <h4>Projeto Blog</h4>
-                <span>HTML</span>
-                <span>CSS</span>
-                <span>Javascript</span>
-            </div>
-            <div class="box-projects-links">
-                <a href="" class="cta-contact" target="_blank">VER PROJETO</a>
-                <a href="" class="cta-contact" target="_blank">VER CÓDIGO</a>
-            </div>
-        </div>
-
-        <div class="box-projects">
-            <img src="./assets/img/Calculadora.png" alt="Imagem da Calculadora" width="250">
-            <div class="box-projects-text">
-                <h4>Projeto Calculadora</h4>
-                <span>HTML</span>
-                <span>CSS</span>
-                <span>Javascript</span>
-            </div>
-            <div class="box-projects-links">
-                <a href="" class="cta-contact" target="_blank">VER PROJETO</a>
-                <a href="" class="cta-contact" target="_blank">VER CÓDIGO</a>
+        
+        <div>
+            <div class="two-box-projects">
+                <div class="box-projects">
+                    <img src="./assets/img/Blog.png" alt="Imagem do Blog" width="250">
+                    <div class="box-projects-text">
+                        <h4>Projeto Blog</h4>
+                        <span>HTML</span>
+                        <span>CSS</span> 
+                        <span>Javascript</span>
+                    </div>
+                    <div class="box-projects-links">
+                        <a href="" class="cta-contact" target="_blank">VER PROJETO</a>
+                        <a href="" class="cta-contact" target="_blank">VER CÓDIGO</a>
+                    </div>
+                </div>
+                <div class="box-projects">
+                    <img src="./assets/img/Calculadora.png" alt="Imagem da Calculadora" width="250">
+                    <div class="box-projects-text">
+                        <h4>Projeto Calculadora</h4>
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>Javascript</span>
+                    </div>
+                    <div class="box-projects-links">
+                        <a href="" class="cta-contact" target="_blank">VER PROJETO</a>
+                        <a href="" class="cta-contact" target="_blank">VER CÓDIGO</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
     <section class="contact">
-        <div>
-            <h2><span>CONTATO</span></h2>
-            <p>Adoraria saber mais sobre o seu projeto e como posso ajudar. Por favor, preencha o formulário, e
-                retornarei o contato o mais rápido possível.</p>
-        </div>
-        <form>
-            <input type="text" required placeholder="Nome" id="Nome" name="NOME"><br>
-            <input type="email" required placeholder="E-mail" id="E-mail" name="E-MAIL"><br>
-            <input type="text" required placeholder="MENSAGEM"><br>
-            <button type="submit" class="cta-contact">ENVIAR MENSAGEM</button>
-        </form>
+            <div class="contact-contaiter">
+                <div>
+                    <h2><span>CONTATO</span></h2>
+                    <p>Adoraria saber mais sobre o seu projeto e como posso <br> ajudar. Por favor, preencha o formulário, e
+                        retornarei o <br> contato o mais rápido possível.</p>
+                </div>
+                <form>
+                    <input type="text" required placeholder="Nome" id="Nome" name="NOME"><br>
+                    <input type="email" required placeholder="E-mail" id="E-mail" name="E-MAIL"><br>
+                    <input type="text" required placeholder="MENSAGEM"><br>
+                    <button type="submit" class="cta-contact">ENVIAR MENSAGEM</button>
+                </form>
+            </div>
     </section>
     <hr>
 
