--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
     <header>
         <h1>DENIS BECK</h1>
         <nav>
-            <a href="github"><i class="fa-brands fa-github"></i></a>
-            <a href="instagram"><i class="fa-brands fa-instagram"></i></a>
-            <a href="linkedin"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="twitter"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="https://github.com/Denisbeckdev" target="_blank"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/denis-beck-312b0443/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+
         </nav>
     </header>
 
@@ -30,16 +29,16 @@
             <p>Morando em Joinville/SC, sou um desenvolvedor <br> front-end apaixonado por criar aplicativos web <br>
                 acessíveis
                 que os usuários adoram.</p>
-            <a href="" class="cta-contact" target="_blank">ENTRE EM CONTATO</a>
+            <a a href="#message" class="cta-contact">ENTRE EM CONTATO</a>
         </div>
-        <img src="./assets/img/profile-denis.jpg" alt="Foto do Denis">
+        <img src="./assets/img/profile-denis-pb.jpeg" alt="Foto do Denis">
     </section>
     <hr>
 
-    <section class="linguagens-box">
+    <section class="languages-box">
         <h2><span>Linguagens</span></h2>
-        <div class="container-Linguagens-box">
-            <div class="linguagens-box-one">
+        <div class="container-languages-box">
+            <div class="languages-box-one">
                 <div class="box">
                     <i class="fa-brands fa-lg fa-html5"></i>
                     <div class="box-text">
@@ -68,7 +67,7 @@
     <section class="section-project">
         <div class="projects">
             <h2><span>Projetos</span></h2>
-            <a href="" class="cta-contact" target="_blank">ENTRE EM CONTATO</a>
+            <a href="#message" class="cta-contact">ENTRE EM CONTATO</a>
         </div>
         
         <div>
@@ -82,8 +81,8 @@
                         <span>Javascript</span>
                     </div>
                     <div class="box-projects-links">
-                        <a href="" class="cta-contact" target="_blank">VER PROJETO</a>
-                        <a href="" class="cta-contact" target="_blank">VER CÓDIGO</a>
+                        <a href="https://denisbeckdev.github.io/Blog/" class="cta-contact" target="_blank">VER PROJETO</a>
+                        <a href="https://github.com/Denisbeckdev/Blog" class="cta-contact" target="_blank">VER CÓDIGO</a>
                     </div>
                 </div>
                 <div class="box-projects">
@@ -95,16 +94,16 @@
                         <span>Javascript</span>
                     </div>
                     <div class="box-projects-links">
-                        <a href="" class="cta-contact" target="_blank">VER PROJETO</a>
-                        <a href="" class="cta-contact" target="_blank">VER CÓDIGO</a>
+                        <a href="https://denisbeckdev.github.io/Projeto_Calculadora/" class="cta-contact" target="_blank">VER PROJETO</a>
+                        <a href="https://github.com/Denisbeckdev/Projeto_Calculadora" class="cta-contact" target="_blank">VER CÓDIGO</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="contact">
-            <div class="contact-contaiter">
+    <section class="contact" id="message">
+            <div class="contact-container">
                 <div>
                     <h2><span>CONTATO</span></h2>
                     <p>Adoraria saber mais sobre o seu projeto e como posso <br> ajudar. Por favor, preencha o formulário, e
@@ -123,10 +122,8 @@
     <footer>
         <h1>DENIS BECK</h1>
         <nav>
-            <a href="github"><i class="fa-brands fa-github"></i></a>
-            <a href="instagram"><i class="fa-brands fa-instagram"></i></a>
-            <a href="linkedin"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="twitter"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="https://github.com/Denisbeckdev" target="_blank"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/denis-beck-312b0443/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
         </nav>
         <div>Desenvolvido por <strong>Denis Beck</strong> <i class="fa-solid fa-computer" style="color: #da4966;"></i>
         </div>
