Atualizações finais HTML e CSS

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         <nav>
             <a href="https://github.com/Denisbeckdev" target="_blank"><i class="fa-brands fa-github"></i></a>
             <a href="https://www.linkedin.com/in/denis-beck-312b0443/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-
         </nav>
     </header>
 
@@ -43,21 +42,21 @@
                     <i class="fa-brands fa-lg fa-html5"></i>
                     <div class="box-text">
                         <h3>HTML</h3>
-                        <P>4 meses de experiência</P>
+                        <P>Estudante</P>
                     </div>
                 </div>
                 <div class="box">
                     <i class="fa-brands fa-lg fa-css3-alt"></i>
                     <div class="box-text">
                         <h3>CSS</h3>
-                        <P>3 meses de experiência</P>
+                        <P>Estudante</P>
                     </div>
                 </div>
                 <div class="box">
                     <i class="fa-brands fa-js"></i>
                     <div class="box-text">
                         <h3>Javascript</h3>
-                        <P>2 meses de experiência</P>
+                        <P>Estudante</P>
                     </div>
                 </div>
             </div>
